# it_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/conf/: bailian_mcp_config.py  embedding_config.py  reranker_config.py
app/import_process/agent/: main_graph.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_import_milvus.py  node_pdf_to_md.py
app/import_process/api/: file_import_service.py
app/import_process/page/: import.html
app/lm/: dashscope_http_utils.py  embedding_utils.py  reranker_utils.py
app/query_process/agent/nodes/: node_item_name_confirm.py  node_search_embedding.py  node_web_search_mcp.py
app/query_process/api/: query_service.py
tests/: test_docker_deployment_files.py  test_embedding_utils.py  test_node_web_search_mcp.py  test_reranker_utils.py  test_service_module_imports.py
